--- a/introduction.tex
+++ b/introduction.tex
@@ -5,10 +5,10 @@
 \chapter{Introduction}
 \pagenumbering{arabic}
 \par Industrialized nations have relied on fossil fuels as the main fuel for electricity, transportation, and industry since the Industrial Revolution. The use of fossil fuels is both harmful to the environment and unsustainable, as it is linked to many problems worldwide such as greenhouse gas emissions which cause climate change and health issues such as cancer and respiratory problems (Ecotricity, 2011; Sharfiee, \& Topal, 2009). Climate change from greenhouse gas emissions in turn leads to the melting of polar ice caps, rising sea levels, and changes of localized climate patterns (Samimi, \& Zarinabade, 2012; Holdren, 2000). Furthermore, the earth's fossil fuel resources may be depleted by the end of the century (Ecotricity, 2011; Sharfiee, \& Topal, 2009).
-\par The U.S. obtains more than 80\% of its energy from fossil fuels such as oil , coal, and natural gas, which means that with an increase in energy use comes an increase in greenhouse gas emissions (The National Academies, 2015). In classifying the U.S.'s energy consumption, the United States Green Building Council (USGBC) has identified that buildings are now the largest sector of energy use, ahead of both industry and transportation, accounting for 41\% of all energy used in the U.S. (USGBC, 2015; Perez-Lombard, 2008). Consequently, buildings are responsible for 50\% of the greenhouse gas emissions in developed countries, such as the U.S. (Rezaie, 2013). Public buildings specifically are large energy consumers because they are used by many people, are large in size, and operate frequently. Furthermore, public buildings are sometimes reliant on costly \#2 heating oil which emits the most greenhouse gas emissions of any heating source (DOER, 2015). The U.S. views the use of renewable resources as a potential solution to the problem of fossil fuel dependence and the negative consequences that are associated (EIA, 2015). For these reasons, buildings have become a primary focus for reduction of energy consumption and for renewable energy implementation.
-\par The Commonwealth of Massachusetts is one state that is working towards using renewable resources to address the issue of greenhouse gas emissions caused by fossil fuel use specifically in buildings. In a legislative effort to reduce the use of fossil fuels in the Commonwealth of Massachusetts, the Global Warming Solutions Act (GWSA) was enacted in August of 2008. The GWSA created a framework for reducing heat-trapping emissions to levels that scientists believe gives humanity a chance of avoiding the worst effects of global warming. Pursuant to the GWSA, all sectors of the economy must reach a target of a 25\% reduction of Greenhouse Gas (GHG) emissions by 2020 and an 80\% reduction by 2050  (EEA, 2015).
-\par As a result of the GWSA, many programs exist regarding energy efficiency and the use of renewable resources. For example, Mass Save (sponsored by the investor-owned utility companies in the state) provides assistance to update old buildings to be more energy efficient and use less fossil fuel by providing free energy audits, LED light bulbs, air sealing, and financial incentives for adding insulation. In addition, the Massachusetts Clean Energy Center (Mass CEC) has offered grants for residential and commercial renewable thermal systems and district energy configurations, where one renewable heating/cooling source provides energy for multiple facilities arranged in a complex. The Department of Energy Resources (DOER) is a state agency within the Commonwealth that has implemented various programs that provide funding and guidance to project sites looking to implement renewable energy systems in buildings (Mass Department of Energy Resources, 2015). One such program is the Renewable Thermal Program, which provides technical assistance and grant funding to municipalities. Included in this program is the “Schools and Public Housing Integrating Renewables and Efficiency” program (SAPHIRE), which focuses specifically on providing dedicated technical assistance and grant funding to K-12 public schools and public housing developments (Mass Department of Energy Resources, 2015).
-\par These programs had made great strides toward reducing fossil fuel use in the Commonwealth, but there was a gap in the evaluation and explanation of existing project processes. Our project was designed to address this gap. The goal of our project was \goal. In order to achieve this goal, we completed the following three research objectives to produce our deliverables:
+\par The U.S. obtains more than 80\% of its energy from fossil fuels such as oil , coal, and natural gas, which means that with an increase in energy use comes an increase in greenhouse gas emissions (The National Academies, 2015). Buildings are now the largest sector of energy use, ahead of both industry and transportation, accounting for 41\% of all energy used in the U.S. (USGBC, 2015; Perez-Lombard, 2008). Furthermore, buildings are responsible for 50\% of the greenhouse gas emissions in developed countries, such as the U.S. (Rezaie, 2013). Public buildings specifically are large energy consumers because they are used by many people, are large in size, and operate frequently. Furthermore, public buildings are sometimes reliant on costly \#2 heating oil which emits the most greenhouse gas emissions of any heating source (DOER, 2015). The U.S. views the use of renewable resources as a potential solution to the problem of fossil fuel dependence and the negative consequences that are associated (EIA, 2015). For these reasons, buildings have become a primary focus for reduction of energy consumption and for renewable energy implementation.
+\par The Commonwealth of Massachusetts is working towards using renewable resources to address the issue of greenhouse gas emissions caused by fossil fuel use. In a legislative effort to reduce the use of fossil fuels in the Commonwealth of Massachusetts, the Global Warming Solutions Act (GWSA) was enacted in August of 2008. The GWSA created a framework for reducing heat-trapping emissions to levels that scientists believe gives humanity a chance of avoiding the worst effects of global warming. Pursuant to the GWSA, all sectors of the economy must reach a target of a 25\% reduction of Greenhouse Gas (GHG) emissions by 2020 and an 80\% reduction by 2050  (EEA, 2015).
+\par As a result of the GWSA, many programs exist regarding energy efficiency and the use of renewable resources. For example, Mass Save (sponsored by the investor-owned utility companies in the state) provides assistance to update old buildings to be more energy efficient and use less fossil fuel by providing free energy audits, LED light bulbs, air sealing, and financial incentives for adding insulation. In addition, the Massachusetts Clean Energy Center (Mass CEC) has offered grants for residential and commercial renewable thermal systems and district energy configurations, where one renewable heating/cooling source provides energy for multiple facilities arranged in a complex. The Department of Energy Resources (DOER) has implemented various programs that provide funding and guidance to project sites looking to implement renewable energy systems in buildings (Mass Department of Energy Resources, 2015). One DOER program is the Renewable Thermal Program, which provides technical assistance and grant funding to municipalities. Included in this program is the “Schools and Public Housing Integrating Renewables and Efficiency” program (SAPHIRE), which focuses specifically on providing dedicated technical assistance and grant funding to K-12 public schools and public housing developments (Mass Department of Energy Resources, 2015).
+\par These programs had made great strides toward reducing fossil fuel use in the Commonwealth, but were lacking an evaluation and explanation of existing project processes. Evaluations and explanations of renewable thermal project processes would allow for future improvement while also providing information necessary to promote the DOER’s programs (DOER, 2015). The goal of our project was \goal. In order to achieve this goal, we completed the following three research objectives to produce case studies to evaluate pilot renewable thermal programs:
 \begin{enumerate}
   \item{Identify the questions and concerns past project site leaders have had when considering implementing a renewable thermal project.}
   \item{Determine project implementation processes and challenges of renewable thermal projects.}
@@ -16,10 +16,10 @@
 \end{enumerate}
 
 \noindent
-The three projects we focused on were:
+The three projects we focused on when completing these objectives and producing our deliverables were:
 \begin{itemize}
   \item{\emph{Amherst College Bunker Building:} Installed biomass pellet boilers. Funded partially by the Mass CEC Pilot. Operational as of April 2015.}
   \item{\emph{Southern Berkshire Regional School:} Installed biomass pellet boilers. Funded partially by SAPHIRE and the MSBA. Nearing completion as of October 2015.}
   \item{\emph{Sudbury Public Housing Development:} Installed Air source heat pumps. Funded entirely by the SAPHIRE program. Operational as of January 2015.}
 \end{itemize}
-\par It is our hope that the case studies we produced on these three DOER renewable thermal projects will enable the DOER to determine where their projects are exceeding in terms of both process and technology performance, and provide information on how these projects can be improved in the future. These case studies will also act as a powerful source of clarifying information for potential renewable thermal project site leaders when considering the implementation of a renewable energy heating system. It is our intention that these case studies will instill confidence in potential project site leaders regarding these renewable technologies and therefore expand the number of these projects. By increasing both the number and effectiveness of these projects, the DOER will be able to decrease fossil fuel use and greenhouse gas emissions within the Commonwealth of Massachusetts.
+\par It is our hope that the case studies we produced on these three DOER renewable thermal projects will enable the DOER to determine where their projects are succeeding in terms of both process and technology performance, and provide information on how these projects can be improved in the future. These case studies may also act as a powerful source of clarifying information for potential renewable thermal project site leaders when considering the implementation of a renewable energy heating system. It is our intention that these case studies will instill confidence among potential project site leaders regarding these renewable technologies and therefore expand the number of these projects. By increasing both the number and effectiveness of these projects, the DOER will be able to decrease fossil fuel use and greenhouse gas emissions within the Commonwealth of Massachusetts.
