Revisions from comments on Oct 13.

--- a/FrontBackMatter/abstract.tex
+++ b/FrontBackMatter/abstract.tex
@@ -5,7 +5,4 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{\numberline{}Abstract}%
 
-The Commonwealth of Massachusetts is dependent on non-renewable resources that are unsustainable and harmful to the environment and public health. The Department of Energy Resources has created renewable thermal programs to promote the implementation of renewable heating and cooling systems in buildings in order to decrease the Commonwealth’s dependence on non-renewable resources. The goal of this project was to evaluate three renewable thermal pilot projects to investigate ways to improve and promote the installation of renewable thermal heating and cooling systems in an effort to support the Department Of Energy Resources in addressing the Commonwealth of Massachusetts’ statutory commitment to reducing greenhouse gas emissions. We investigated three existing projects by gathering qualitative and quantitative data on the process of implementation and performance once in place. We used this information to understand the project processes including questions and concerns past project site leaders have had and compiled them in visually appealing case studies. These case studies will inform potential project leaders of everything involved in implementing a renewable project with the hopes of expanding the DOER renewable thermal programs. 
-
-% old one:
-% The Commonwealth of Massachusetts is dependent on nonrenewable resources that are unsustainable and harmful to the environment and public health. The Department of Energy Resources (DOER) has implemented several pilot programs since 2012 to promote uptake and public acceptance of renewable thermal technologies, like biomass heating, geothermal heat pumps, air source heat pumps, and solar thermal, across all building sectors. The energy required to heat hot water and spaces in buildings in the Northeast is roughly equivalent to 75\% of total annual energy use; therefore, heating energy represents a significant portion of energy costs and greenhouse gas emissions. The goal of this project is to evaluate three renewable thermal pilot projects to investigate ways to improve and promote the installation of renewable thermal heating and cooling systems in an effort to support the Department Of Energy Resources in addressing the Commonwealth of Massachusetts’ statutory commitment to reducing greenhouse gas emissions. We analyzed three existing projects by gathering qualitative and quantitative data. We used these data to produce case studies comprised of numerical comparisons of baseline energy use (fossil fuel) vs. post-retrofit energy use (renewable heating/cooling) to share in the DOER renewable thermal website and with stakeholders who may be interested in installing a similar technology. These case studies will inform potential project leaders of all that is involved in a project in the hopes of expanding adoption of renewable thermal technologies.
+\par The Massachusetts Department of Energy Resources has created programs to promote the installation of renewable thermal systems in buildings in order to decrease the Commonwealth’s dependence on nonrenewable resources, which are unsustainable and harmful to the environment and public health. The goal of this project was to support the DOER by evaluating three renewable thermal projects to improve and promote the installation of renewable thermal systems. We gathered information on the project processes and compiled it into informational case studies for each site. It is our hope that these case studies will lead to the implementation of more renewable thermal projects, each with more efficient implementations.
