--- a/FrontBackMatter/authorship.tex
+++ b/FrontBackMatter/authorship.tex
@@ -6,7 +6,7 @@
         \begin{tabular}{|l|l|l|}
           \hline
           \thead{Section} & \thead{Primary Author} & \thead{Primary Editor} \\ \hline
-          Abstract & --- & --- \\ \hline
+          Abstract & Jonas & All \\ \hline
           Executive Summary & --- & --- \\ \hline
           Introduction & All & All \\ \hline
           Background & All & Jonas, Carolina, and Luis \\ \hline
