--- a/main.tex
+++ b/main.tex
@@ -38,8 +38,8 @@
 \pagenumbering{roman}
 \include{FrontBackMatter/abstract}
 \include{FrontBackMatter/acknowledgements}
+\include{FrontBackMatter/authorship}
 % Executive Summary
-\include{authorship}
 \include{FrontBackMatter/contents}
 
 \include{introduction}
