--- a/methodology.tex
+++ b/methodology.tex
@@ -9,12 +9,13 @@
   \item{Determine project implementation processes and challenges of renewable thermal projects.}
   \item{Determine how these renewable thermal projects are performing in regards to cost and energy usage.}
 \end{enumerate}
+\par Once this goal was completed, we used the information gathered in the objectives above to produce our deliverables: a set of three case studies that explain the project process and lessons learned from each project site we studied.
 
   \section{Renewable Thermal Project Site Information}
-  \par We focused on three existing DOER renewable thermal projects to develop case studies that will act as promotional material for the DOER and informational material for potential project site leaders. To reach the goal of our project, we used information from these three renewable thermal project sites to produce case studies. Case studies are a methodological approach we applied in order to provide potential project sites with information from all aspects of each renewable thermal project. These three projects were chosen as the focus of this project because they encompass a wide variety of the types of projects the DOER oversees. While all three project sites utilize renewable thermal heating and cooling, the sites utilize different renewable thermal technologies. Two of our three projects are schools that involve biomass boiler systems at different stages of implementation and span three government funding programs. The third project is a public housing development utilizing air source heat pumps. These sites were chosen to provide information regarding multiple renewable thermal technologies in different applications  in order to maximize the potential project site leaders that we can inform.
+  \par We focused on three existing DOER renewable thermal projects to develop case studies that will act as promotional material for the DOER and informational material for potential project site leaders. These case studies serve as the basis for a methodological approach that can be used provide potential project sites with information from all aspects of previously completed renewable thermal project. These three projects were chosen as the focus of this project because they encompass a variety of the types of projects the DOER oversees. While all three project sites utilize renewable thermal heating and cooling, the sites utilize different renewable thermal technologies. Two of our three projects are schools that involve biomass boiler systems at different stages of implementation and span three government funding programs. The third project is a public housing development utilizing air source heat pumps. These three sites are described in the following sections.
 
     \subsection{Amherst College Bunker Building - Biomass Pellet Heating}
-    \par Amherst College has had a biomass pellet heating system in operation since this past April. This project was done through the Renewable Thermal Program at the DOER. Our sponsor chose this project to be a focus as the biomass heating system has been in operation for half a year and can provide a tangible comparison between pre and post implementation cost and energy usage.
+    \par Amherst College has had a biomass pellet heating system in operation since April 2015. This project was done through the Renewable Thermal Program at the DOER. Our sponsor chose this project to be a focus as the biomass heating system has been in operation for half a year and can provide a tangible comparison between pre and post implementation cost and energy usage.
 
     \subsection{Southern Berkshire Regional School - Biomass}
     \par The Southern Berkshire Regional School District project was funded under the SAPHIRE program and began construction during Summer 2015. The construction was not completed by the time we created the case studies, so post project implementation data could not be obtained. It was therefore used as a reference to understand the process of planning, designing, acquisition, and installation of these biomass systems. This site illustrates setbacks that can occur in the construction process as well as the solutions to the problems these setbacks can cause.
@@ -29,12 +30,12 @@
     \par In order to determine which metrics we would use when gathering information at each project site we interviewed our sponsor about the questions onsite stakeholders and project site leaders including town officials, school administration, and housing managers have asked when considering implementing a DOER renewable thermal program in their communities. The Department of Energy Resources has worked with the leaders of several communities each considering different renewable thermal technologies in different applications. Through this work, the DOER has likely encountered many questions and concerns that individuals in the communities have had during the project process.
 
     \subsection{Consulting Onsite Stakeholders}
-    \par We interviewed onsite stakeholders and project leaders of the sites we studied, including but not limited to maintenance faculty, building administrators, and town officials about questions, concerns, and doubts they had when beginning the projects as well as comments they have now that the projects have been completed. In order to produce interview questions and interview methods for the onsite stakeholders and project leaders, we utilized the information gathered from our interview with our sponsor to define categories for interview questions. Once we determined these categories, we drafted interview questions to provide a full understanding of how each large category played into the project process. These interview questions were created taking into consideration the information that was presented to each site in the feasibility studies, as the nature of a feasibility study is to provide a full explanation of a potential project at each specific location. We also took into consideration the experience we had when on a site visit to a potential new project for the DOER, Petersham Center Elementary School, where we were able to directly see how the pre implementation process works and talk with the representative of the school in charge of the renewable project. After drafting these interview questions, we created on-site information gathering guides to act as checklists for each project site to ensure we gathered information addressing each interview question we had created.
+    \par We interviewed onsite stakeholders and project leaders of the sites we studied, including but not limited to maintenance faculty, building administrators, and town officials about questions, concerns, and doubts they had when beginning the projects as well as comments they have now that the projects have been completed. In order to produce interview questions and interview methods for the onsite stakeholders and project leaders, we utilized the information gathered from our interview with our sponsor to define categories for interview questions and compiled these in our information gathering guide, found in Appendix 4. These categories included cost, maintenance, aesthetics, feasibility, and community acceptance, among others. Once we determined these categories, we drafted interview questions to provide a full understanding of how each large category played into the project process. These interview questions were created taking into consideration the information that was presented to each site in the feasibility studies, as the nature of a feasibility study is to provide a full explanation of a potential project at each specific location. We also took into consideration the experience we had when on a site visit to a potential new project for the DOER, Petersham Center Elementary School, where we were able to directly see how the pre implementation process works and talk with the representative of the school in charge of the renewable project. After drafting interview questions, we created on-site information gathering guides to act as checklists for each project site to ensure we gathered information addressing each interview question we had created.
     \par Before each interview, we provided the interviewee with an informed consent form which explained that their identities would be kept confidential and that the information they provided us would be used when producing the case studies for each site. We also asked each interviewee if we could record the audio for the interview to allow us to create an accurate interview transcript to analyze. The interviewees for each site are as follows:
     \begin{itemize}
       \item{At Amherst College we interviewed an individual who worked closely with the project design process and works closely with maintaining the biomass boilers now that they are in operation. We chose to speak with him/her since he/she is very familiar with the project process and works closely with maintenance of the system.}
       \item{For Southern Berkshire Regional School District, we interviewed two individuals who worked very closely with acquiring the grants from the DOER as well as communicating with the contractors prior to project implementation. These individuals continue to play large roles in ensuring the construction of the project is going well.}
-      \item{At the Sudbury Public Housing Development we spoke with five individuals. One individual we spoke with worked very closely with the DOER grant process and the PowerWise metering system. The second individual we spoke with works very closely with the housing development and its day to day operation. The other three individuals we spoke with are tenants of the housing development. We asked these individuals questions about their thought processes in both deciding to move forward with the program as well as when making decisions and adapting to new situations, such as unexpected obstacles during the the construction phase.}
+      \item{At the Sudbury Public Housing Development we spoke with five individuals. One individual we spoke with worked very closely with the DOER grant process and the PowerWise metering system. The second individual we spoke with works very closely with the housing development and its day-to-day operation. The other three individuals we spoke with are tenants of the housing development. We asked these individuals questions about their thought processes in both deciding to move forward with the program as well as when making decisions and adapting to new situations, such as unexpected obstacles during the the construction phase.}
     \end{itemize}
     \par Once we interviewed both the onsite stakeholders and our sponsor, we created interview transcripts from the interview recordings and applied codes to the transcripts in order to identify topics to focus on in our case studies such as cost, aesthetics, feasibility, and energy performance. This information gave us further insight into the information people considering similar projects may find useful. It also provided us with qualitative data about how the project has been performing since implementation. These are the people that are in direct contact with the renewable heating and cooling systems, and in some cases, deal with the maintenance of the systems. They were able to provide insight into maintenance costs, time commitment, and feasibility. The full list of interview questions and on-site information guides can be found in Appendices 3 and 4 respectively. 
 
@@ -43,15 +44,14 @@
   \par In order to achieve this objective, we consulted those who were/are in charge of each site in regards to the DOER renewable thermal programs. The list of who we interviewed and the reasoning behind our choices can be found in the previous objective. The full list of interview questions and on-site information guides can be found in Appendices 3 and 4 respectively. This information acted as another addition to the information we compiled when creating the case studies of the three locations.
 
   \section{Objective \#3: Determining renewable thermal project performance }
-  \par Our third objective was to determine how these renewable thermal projects are performing in regards to cost and energy usage. When producing these case studies, we desired quantitative data to illustrate the status of the project. In an effort to achieve this goal, we gathered information from utility bills and projected values from feasibility studies as well as utilized existing energy auditing tools to collect and categorize numerical data from each project site.  
+  \par Our third objective was to determine how these renewable thermal projects are performing in regards to cost and energy usage. When producing these case studies, we desired quantitative data to illustrate the status of the project. In an effort to achieve this goal, we attempted to gather information from utility bills and projected values from feasibility studies as well as utilized existing energy auditing tools to collect and categorize numerical data from each project site.  
 
     \subsection{Data Collection and Analysis}
-    \par In order to produce the evaluation of quantitative data necessary for the case studies, we gathered information from utility bills and projected values from feasibility studies as well as utilized existing energy auditing tools to collect and categorize numerical data from each project site. 
- 
+    \par In order to produce the evaluation of quantitative data necessary for the case studies, we attempted to gather quantitative data from each of the three project sites, listed below. 
    \begin{itemize}
       \item{At Amherst College, we collected quantitative data regarding project performance partially from utility bills and partially from the interviews with the individual who works closely with the maintenance of the boilers.}
       \item{For the Southern Berkshire Regional School District, we could only utilize the projected outcomes presented in the feasibility studies, because the project is still under construction.}
-      \item{For the Sudbury Public Housing Development, we spoke with an individual who works very closely with the housing development and its day to day operation regarding how the project is performing in her opinion and utilized the PowerWise tool, a web based online application used for metering different utilities. This gave us important data on cost as well as use and efficiency of the newly installed systems. More information regarding specifics of the PowerWise tool can be found in Appendix 1.}
+      \item{For the Sudbury Public Housing Development, we spoke with an individual who works very closely with the housing development and its day-to-day operation regarding how the project is performing in her opinion and utilized the PowerWise tool, a web based online application used for metering different utilities. This information gave us important data on cost as well as use and efficiency of the newly installed systems. More information regarding specifics of the PowerWise tool can be found in Appendix 1.}
     \end{itemize}
 
   \section{Deliverables: Case Studies on Three Project Sites}
