Added all the addins to the actual paper. Minor edits to other sections.

--- a/FrontBackMatter/authorship.tex
+++ b/FrontBackMatter/authorship.tex
@@ -7,7 +7,7 @@
           \hline
           \thead{Section} & \thead{Primary Author} & \thead{Primary Editor} \\ \hline
           Abstract & Jonas & All \\ \hline
-          Executive Summary & --- & --- \\ \hline
+          Executive Summary & Carolina and Keirstan & All \\ \hline
           Introduction & All & All \\ \hline
           Background & All & Jonas, Carolina, and Luis \\ \hline
           Methodology & Keirstan and Luis & Keirstan \\ \hline
