--- a/background.tex
+++ b/background.tex
@@ -7,7 +7,7 @@
 
   \section {Fossil Fuel Dependence and its Consequences}
   \par The United States has depended on non-renewable resources as a source of power since the 1800's when oil and coal were discovered to be more energy dense than wood (Samimi, \& Zarinabadi, 2012, WaitButWhy, 2015). Figure \ref{fig:pie} represents the percentages of the total energy consumed in the United States. More than 80\% of the total energy consumed by the country comes from a non-renewable source of energy (U.S. Energy Information Administration, 2015).
-  \begin{figure}[h]
+  \begin{figure}[H]
     \centering
       \includegraphics[width=0.70\textwidth]{images/01-EnergyConsuptionPieChart}
     \caption{Energy Consumption in the US (U.S. Energy Information Administration, 2015)}
@@ -17,7 +17,7 @@
   \par Greenhouse gasses are not the only detriment from the pollution that burning fossil fuels produces. Acid rain is directly linked to fossil fuels due to the sulfur dioxide and nitrogen oxides that power plants release when burning fossil fuels (U.S. Environmental Protection Agency, 2012). Acid rain negatively affects the biodiversity of our planet by changing the pH of water and acidifying soils (Likens, 2011). A recent survey in the Northeast of the United States showed that 41\% of lakes in the Adirondack Mountain region are acidic or subject to short-term pulses in acidity related to snowmelt and rain storms. Similarly, the same characteristics were found in 15\% of the lakes in the areas of Catskill and New England (Likens, 2011).
   \par Fossil fuels also damage the environment through accidents such as oil spills. Oil spills affect a great variety of animals, both in the ocean and in surrounding areas (Office of Response and Restoration, 2015). Light oils such as gasoline or diesel are highly explosive and toxic, therefore they can kill animals and plants that they touch and can also affect human beings who inhale the fumes. Heavy oils are black and sticky substances commonly used to fuel ships. In the short term these oils can cover organisms affecting their mobility and can also affect their ability to keep warm; many birds die from hypothermia due to these oil spills (Office of Response and Restoration, 2015). In the long run, exposure to heavy oils might result in health problems such as tumors in organisms (Office of Response and Restoration, 2015).
   \par In addition to the use of oil, the use of natural gas has negative consequences. Hydraulic fracturing (also known as fracking) is a natural gas harvesting process that uses large quantities of water to fracture the earth and release gas. In fact, annual water consumption by fracking is equivalent to the annual water consumption of 40 to 80 cities with populations of 50,000 each (Gold, 2014). Figure \ref{fig:power} illustrates how natural gas use in Massachusetts has grown while coal and oil use have declined. While not harvested in Massachusetts, the increased use of natural gas results in increased fracking in other areas of the country to keep up with the increasing demand.
-  \begin{figure}[h]
+  \begin{figure}[H]
     \centering
       \includegraphics[width=\textwidth]{images/02-ElectricPowerSectorFuelUseinMassachusetts}
     \caption{Electric Power Sector Fuel Use in Massachusetts (EIA, 2013)}
@@ -31,7 +31,7 @@
   \par Heating and cooling have large energy demands in most buildings and are becoming more necessary with the amount of time people have been spending indoors. In an energy audit of school buildings in Italy, thermal consumption was 80\% of the energy consumed (Desideri, 2002). This is not uncommon: in the average Massachusetts household, thermal energy use represents about 75\% of the energy consumption with space heating the biggest component (60\%) (EIA, 2015).
   \par With buildings using large amounts of energy, especially for heating and cooling, many alternative and renewable energy options have been researched to decrease the use of fossil fuels for energy use and buildings. Data from one case study in Ontario, presented in Table \ref{tab:energyuse}, shows the distribution of different draws of energy in a typical residential building as well as common sources of energy for them. The rightmost column in Table \ref{tab:energyuse} shows possible alternative and renewable energy sources that can improve the energy efficiency of the building and decrease the use of fossil fuels. Appliances, lighting, and “other” can use electricity generated on site by any solar, wind, or other renewable sources.
   \begin{center}
-    \begin{table}[h]
+    \begin{table}[H]
       \caption{Energy Use in a Residential Building Energy Use in a Residential Building (Rezaie, 2013)}
       \begin{adjustwidth}{-0.5in}{-0.5in}
         \centering
@@ -61,8 +61,8 @@
     \par Public opinions tend to become more positive once a project is implemented and people understand the economic benefits (Karlstrom, Ryghaug, 2014). One way to address the knowledge deficit after project implementation is through educational programs, such as kiosks at the location of the project or webpages. The Ferrisburgh Solar Farm, which was built in Vermont, is a 3,806 solar panel system, installed by REV Corporate Member Alteris Renewables (Renewable Energy Success Stories, 2015). After the implementation of this project, the Solar Farm created an open-to-the-public educational kiosk where they provide the information about the benefits of the project. They also published a website on the internet that tracks the solar energy output of their farm (Renewable Energy Success Stories, 2015). If the public comes to understand how renewable technologies work, they may begin to support more renewable energy projects, which would aid in their community's transition away from fossil fuels and toward renewable energy sources.
 
     \subsection{Cost and Pricing of Renewable Energy Systems}
-    \par Making the choice to switch to renewable resources is just like many other long term investments. The upfront cost is high, but in the long term, it will save money. For example: buying a car is a long term investment where generally the longer you keep the car, the more value you get out of the investment, but if you only look at the short term, leasing may be more cost effective. Installing renewable energy sources can pose a large upfront cost, but some renewable resources have lower operating costs than fossil fuels and thus will save money in the long term (BEAM Engineering, 2014; D.C. Architects, 2014; DOER, 2015; RDK Engineers, 2014; Wilson Engineering, 2015). In order to lighten the load of the upfront initial cost, there are many government funds allocated to help renewable energy projects. Despite the effort toward incentivizing renewable energy projects, the World Bank and International Energy Agency put global annual subsidies for fossil fuels in the range of \$100 billion to \$200 billion, making renewable energy programs appear even more expensive by comparison (Beck \& Martinot, 2004).
-    \par Many different costs factor into the high upfront cost of installing a renewable thermal technology. The assessing of the property, permitting, and planning add to the upfront cost, as they must be completed by a contracted, qualified, and well-experienced engineering firm (DOER, 2015). These renovations can completely change a building's heating and cooling system, which is an expensive change as well (Beck \& Martinot, 2004). After all the support work, the actual renewable energy technologies need to be purchased, and they may face high taxes and import duties (Beck \& Martinot, 2004). Where renewable energy technologies excel is in the operations and fuel costs. For example, many renewable resources, such as solar, don't require the purchase of fuel. Additionally, once the system is operational, the maintenance costs of the system are often similar to the costs associated with fossil fuel heating systems (BEAM Engineering, 2014; Wilson Engineering, 2015).
+    \par Making the choice to switch to renewable resources is just like many other long term investments. The upfront cost is high, but in the long term it will save money. For example: buying a car is a long term investment where generally the longer you keep the car, the more value you get out of the investment, but if you only look at the short term, leasing may be more cost effective. Installing renewable energy systems can pose a large upfront cost, but some renewable resources have lower operating costs than fossil fuels and thus will save money in the long term (BEAM Engineering, 2014; D.C. Architects, 2014; DOER, 2015; RDK Engineers, 2014; Wilson Engineering, 2015). In order to lighten the load of the upfront initial cost, there are many government funds allocated to help renewable energy projects. Despite the effort toward incentivizing renewable energy projects, the World Bank and International Energy Agency put global annual subsidies for fossil fuels in the range of \$100 billion to \$200 billion, making renewable energy programs appear even more expensive by comparison (Beck \& Martinot, 2004).
+    \par Many different costs factor into the high upfront cost of installing a renewable thermal technology. The assessing of the property, permitting, and planning add to the upfront cost, as they must be completed by a contracted, qualified, and well-experienced engineering firm (DOER, 2015). These renovations can completely change a building's heating and cooling system, which is an expensive change as well (Beck \& Martinot, 2004). After all the preparatory work, the actual renewable energy technologies need to be purchased, and they may face high taxes and import duties (Beck \& Martinot, 2004). Where renewable energy technologies excel is in the operations and fuel costs. For example, many renewable resources, such as solar, don't require the purchase of fuel. Additionally, once the system is operational, the maintenance costs of the system are often similar to the costs associated with fossil fuel heating systems (BEAM Engineering, 2014; Wilson Engineering, 2015).
 
     \subsection{Performance Metering in Renewable Energy Systems}
     \par When considering the implementation of a renewable thermal project, multiple stakeholders are interested in being provided with an accurate measurement of cost savings (Massachusetts Department of Energy Resources, 2015). Additionally, once a project has been completed many owners want to know exactly how much money they are saving with their new installation. The way to obtain this information is generally through performance metering technology. There are multiple types of performance metering ranging from just looking at total energy consumption per month, to monitoring each circuit in the building on a minute by minute basis.
@@ -75,7 +75,7 @@
   \section{Massachusetts and Energy Efficiency/Renewable Energy Programs}
   \par Despite the difficult process of transitioning to renewable energy systems, Massachusetts is committed to increasing the use of renewable resources to decrease greenhouse gas emissions. Focusing on buildings with regards to energy is especially important for Massachusetts because buildings account for 49\% of all energy consumed in the Commonwealth, compared to 41\% nationally (EIA, 2015). Ranked 5th with the most LEED certified buildings in the United States, the Commonwealth of Massachusetts has become a leader in energy efficiency and alternative/renewable energy use (USGBC, 2015). This success in LEED certifications is due in part to the many supportive energy efficiency and renewable energy grants, programs, and regulations in the Commonwealth of Massachusetts. An important part of Massachusetts' efforts to promote the use of renewable energy resources is the Green Communities Act of 2008.
   \par The Green Communities Act prompted programs to boost energy efficiency and encourage investment in renewable energy (Conservation Law Foundation, 2010). This act also requires utilities to increase investment in energy efficiency, reducing demand and delivering savings to customers. The Green Communities Act mandates the design and implementation of three year energy efficiency plans for gas and electric utilities, provides funding for energy efficiency projects, and requires that 15\% of all electricity be supplied by new renewable power facilities by 2020  (Conservation Law Foundation, 2010).
-  \par With the Green Communities Act of 2008 legislation in place, funding and guidelines became available for emerging energy efficiency and renewable energy programs to utilize. As a result, many programs within Massachusetts aim to further the Commonwealth's energy efficiency and renewable energy successes. The Massachusetts Clean Energy Center (Mass CEC) is an agency that was developed in 2009, immediately following the Green Communities Act. The Mass CEC  is dedicated to accelerating the success of clean energy technology through providing funding for renewable energy rebates for residents and businesses (Mass CEC, 2015). Another important program for the progression of energy efficiency and renewable resources is the Massachusetts School Building Authority (MSBA). The MSBA has started sustainable programs with emphasis on reducing energy and water consumption (MSBA, 2011). The MSBA also utilizes the MA Collaborative point system to assess potential projects in high performance schools and how much, if any, funding they will provide to aid these projects (MSBA, 2011). This Green Schools program under the MSBA pays a percentage of the total cost to renovate schools that wish to increase energy efficiency and/or install a renewable energy heating and cooling system (MSBA, 2011).
+  \par With the Green Communities Act of 2008 legislation in place, funding and guidelines became available for emerging energy efficiency and renewable energy programs to utilize. As a result, many programs within Massachusetts aim to further the Commonwealth's energy efficiency and renewable energy successes. The Massachusetts Clean Energy Center (Mass CEC) is an agency that was developed in 2009, immediately following the Green Communities Act. The Mass CEC  is dedicated to accelerating the success of clean energy technology through providing funding for renewable energy rebates for residents and businesses (Mass CEC, 2015). Another important agency for the progression of energy efficiency and renewable resources is the Massachusetts School Building Authority (MSBA). The MSBA has started sustainable programs with emphasis on reducing energy and water consumption (MSBA, 2011). The MSBA also utilizes the MA Collaborative point system to assess potential projects in high performance schools and how much, if any, funding they will provide to aid these projects (MSBA, 2011). This Green Schools program under the MSBA pays a percentage of the total cost to renovate schools that wish to increase energy efficiency and/or install a renewable energy heating and cooling system (MSBA, 2011).
 
     \subsection{Specific Energy Efficiency/Renewable Energy Programs in Buildings}
     \par There are many building focused energy programs within the Commonwealth of Massachusetts. For example, the \emph{Building America: Bringing Buildings Innovations to Market}  program focuses on improving building energy performance in residences all over the country; however, it has a concentrated focus on the Commonwealth of Massachusetts due to the Commonwealth's energy programs and legislation (EERE, 2015). Another similar program with large focus in Massachusetts is \emph{Better Building Partners}, a program that works with communities to promote energy efficiency in homes and other buildings. In order to achieve these goals, the program works with city and statewide partners (EERE, 2015).
@@ -85,11 +85,11 @@
     \par The DOER's Renewable Thermal Program and SAPHIRE Program focus mainly on public buildings for a few reasons. The first is that the programs are using government funding, so it makes logical sense to use these resources to improve public resources and decrease the expenses of public facilities. The second reason is that public buildings require a lot of energy: 49\% of all energy in Massachusetts. Public buildings are often relatively large in size, and thus consume a lot of energy for heating and cooling. Lastly, even if individuals change their residences to use renewable energy for heating and cooling, a community won't be completely sustainable until the public resources are addressed, which is the responsibility of the government (Office of Energy Efficiency and Renewable Energy, 2015).
 
   \section{Renewable Energy Technologies}
-  \par Renewable energy is a potential solution to the use of fossil fuels, specifically in public buildings. There are multiple renewable sources of energy in the market used to generate either electricity (measured in kilowatt hours (kWh)) or heating energy (measured in British Thermal Units (BTUs)). With the relatively high consumption of BTUs in buildings in the Northeast, the DOER has developed incentive programs to support renewable sources of heating and cooling: solar thermal, geothermal, biomass and most recently, air source heat pumps. In this section, we will provide a description of each renewable energy technology as well as its advantages and disadvantages. Since the scope of our project is within Massachusetts, we will provide relevant information on these technologies with regards to their application in the Commonwealth of Massachusetts. 
+  \par Renewable energy is a potential solution to the use of fossil fuels, specifically in public buildings. There are multiple renewable sources of energy in the market used to generate either electricity (measured in kilowatt hours (kWh)) or heating energy (measured in British Thermal Units (BTUs)). With the relatively high consumption of BTUs in buildings in the Northeast, the DOER has developed incentive programs to support renewable sources of heating and cooling: solar thermal, geothermal, biomass and most recently, air source heat pumps. In this section, we will provide a description of each renewable energy technology as well as its advantages and disadvantages. Since the scope of our project is within Massachusetts, we will provide relevant information on these technologies with regards to their application in the Commonwealth of Massachusetts.
 
     \subsection{Solar Thermal}
     \par A solar thermal system consists of panels that absorb the energy of the sun to heat pipes with water (or another liquid) that then will heat the building spaces or provide hot water heating (as seen in Figure \ref{fig:solar}) (Massachusetts Department of Energy Resources, 2015).
-    \begin{figure}[h]
+    \begin{figure}[H]
       \centering
         \includegraphics[width=0.75\textwidth]{images/03-SolarHotWaterHeatingSystem}
       \caption{Solar Hot Water Heating System (Massachusetts DOER, 2015)}
@@ -97,8 +97,7 @@
     \end{figure}
     \par Solar thermal systems differ from solar photovoltaic (PV) systems in that they generate thermal energy instead of electricity. Solar thermal systems have multiple advantages and disadvantages related to the use and installation, which are important to consider in order to understand when and where this solar thermal system might be applicable and efficient. Below we provide a summary of the advantages and disadvantages of using a solar thermal system.\\
 
-    \vbox{
-    \noindent
+    \par \noindent
     Advantages of a Solar Thermal System include:
     \begin{itemize}
       \item{The ability to heat liquids such as water that then can be used for showers, pools and laundry (Massachusetts Department of Energy Resources, 2015).}
@@ -107,13 +106,12 @@
       \item{The ability to store energy for when the sun sets and is able to provide some energy during cloudy days (Massachusetts Department of Energy Resources, 2015).}
       \item{The low price after incentives save customers up to 50\% of the cost of the system through the Commonwealth Solar Hot Water Rebate program and the 0\% interest HEAT loans available through Mass SAVE (Massachusetts Department of Energy Resources, 2015).}
     \end{itemize}
-    }
     \vbox{
     \noindent
     Disadvantages of a Solar Thermal System include:
     \begin{itemize}
       \item{The inability to be used as the only source of power to meet the base load energy demand of a building (Massachusetts Department of Energy Resources, 2015).}
-      \item{The potential to emit some greenhouse gases such as nitrogen trifluroide and sulfur hexafluoride (Maehlum, M. A., 2014)}
+      \item{The potential to emit some greenhouse gases such as nitrogen trifluroide and sulfur hexafluoride (Maehlum, M. A., 2014).}
     \end{itemize}
     }
 
@@ -128,7 +126,7 @@
     \par The following list shows the advantages and disadvantages of the use and/or installation of Geothermal heating systems.\\
     
     \vbox{
-    \noindent
+    \par \noindent
     Advantages of a Geothermal Heating System include:
     \begin{itemize}
       \item{The ability to provide heat during the winter since the temperature in the Earth will be constant and warmer than the outside air (Massachusetts Department of Energy Resources, 2015).}
@@ -158,7 +156,7 @@
     \par Biomass systems have a variety of positive and negative characteristics related to their use and installation.\\
     
     \vbox{
-    \noindent
+    \par \noindent
     Advantages of a Biomass System include:
     \begin{itemize}
       \item{That it strengthens the market for locally-sourced energy products, particularly when biomass is produced from waste and residual woods which are byproducts of forestry and manufacturing within the region. This supports the local clean energy economy and job growth (Massachusetts Department of Energy Resources, 2015).}
@@ -185,14 +183,14 @@
       \caption{Air Source Heat Pumps (Massachusetts DOER, 2015)}
       \label{fig:ashp}
     \end{figure}
-    \par An Air source heat pump system is a very versatile and affordable system but there are certain conditions that must be met in order to make it efficient.
+    \par An Air source heat pump system is a very versatile and affordable system but there are certain conditions that must be met in order to make it efficient.\\
     
     \vbox{
-    \noindent
+    \par \noindent
     Advantages of an Air Source Heat Pump include:
     \begin{itemize}
       \item{That it can be powered by electricity obtained from solar panels making them energy efficient and clean (Massachusetts Department of Energy Resources, 2015).}
-      \item{That a ductless mini-split system is a great add-on for non-ducted houses\footnote{Non-ducted houses: Houses that don't have hydronic (hot water heat) systems, radiant panels or space heaters (Massachusetts Department of Energy Resources, 2015).}}
+      \item{That a ductless mini-split system is a great add-on for non-ducted houses (Houses that don't have hot water heat systems, radiant panels or space heaters) (Massachusetts Department of Energy Resources, 2015).}
       \item{That mini-split systems are small and have great flexibility on installation for zoning or heating/cooling individual rooms (Massachusetts Department of Energy Resources, 2015).}
       \item{That it has low installation costs while still being environmentally friendly (U.S. Department of Energy, 2001).}
     \end{itemize}
