--- a/biblio.tex
+++ b/biblio.tex
@@ -195,3 +195,5 @@ Wilson Engineering. (2015). \emph{Boiler System Sizing Review for Southern Berks
 
 \hangindent=0.5in
 Yang, H., Cui, P., \& Fang, Z. (2010). Vertical-borehole ground-coupled heat pumps: a review of models and systems. \emph{Applied Energy}, 87(1), 16-27.
+
+\setlength{\parindent}{0.25in}
