--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,9 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{indentfirst}
+\usepackage{pdfpages}
+\usepackage{ragged2e}
+\setlength{\RaggedRightParindent}{\parindent}
 \onehalfspacing
 
 \title{Advancement of Renewable Thermal Energy Programs in MA through the Production of Case Studies}
@@ -28,13 +31,13 @@
   Keirstan Field \\
   Carolina Leguizamon \\
   Jonas Rogers \\
-  Luis Vargas \\\\
-  Project Advisors: Seth Tuler and Paul Mathisen
+  Luis Vargas
 }
 
 \begin{document}
+\RaggedRight
 
-\maketitle
+\includepdf{addins/cover.pdf}
 \pagenumbering{roman}
 \include{FrontBackMatter/abstract}
 \include{FrontBackMatter/acknowledgements}
