--- a/recommendations.tex
+++ b/recommendations.tex
@@ -5,7 +5,7 @@
 \chapter{Recommendations}
 \par In this chapter we present recommendations to improve the planning and implementation process for renewable thermal technologies through DOER renewable thermal programs. Each recommendation is supported by our findings and review of relevant literature. It is important to note that our data analysis, and thus our recommendations are not without limitations. We were unable to provide an analysis of projected outcomes and actual outcomes relating to greenhouse gas emissions, renewable system energy efficiency, annual energy use, and annual fuel cost comparison of renewable systems and fossil fuel systems due to the lack of access to quantitative data at each site. Furthermore, our recommendations stem from site visits at only three project sites in a young program. For this reason, our recommendations reflect our analysis of qualitative data we collected including interviews and onsite visits from each of the three project sites. The recommendations are organized into major categories in the following sections.
 
-\section{Recommendations relating to informational material for potential project sites}
+\section{Recommendations Relating to Informational Material for Potential Project Sites}
 \subsection{We recommend that the DOER continue to create case studies to provide up to date information to potential project sites about existing renewable thermal projects}  
 \par By continuing to create these case studies, found in Appendix 5, the DOER will be able to present more examples of similar projects for potential site leaders to learn from. As seen in the following section, we learned about the importance of providing feasibility studies to potential project sites from the interview with our sponsor. It is our hope that this will lead to more renewable thermal projects each with smoother project processes.
 
