--- a/methodology.tex
+++ b/methodology.tex
@@ -17,11 +17,11 @@
     \subsection{Amherst College Bunker Building - Biomass Pellet Heating}
     \par Amherst College has had a biomass pellet heating system in operation since April 2015. This project was done through the Renewable Thermal Program at the DOER. Our sponsor chose this project to be a focus as the biomass heating system has been in operation for half a year and can provide a tangible comparison between pre and post implementation cost and energy usage.
 
-    \subsection{Southern Berkshire Regional School - Biomass}
-    \par The Southern Berkshire Regional School District project was funded under the SAPHIRE program and began construction during Summer 2015. The construction was not completed by the time we created the case studies, so post project implementation data could not be obtained. It was therefore used as a reference to understand the process of planning, designing, acquisition, and installation of these biomass systems. This site illustrates setbacks that can occur in the construction process as well as the solutions to the problems these setbacks can cause.
+    \subsection{Southern Berkshire Regional School - Biomass Pellet Heating}
+    \par The Southern Berkshire Regional School District project was funded under the SAPHIRE Program and began construction during Summer 2015. The construction was not completed by the time we created the case studies, so post project implementation data could not be obtained. It was therefore used as a reference to understand the process of planning, designing, acquisition, and installation of these biomass systems. This site illustrates setbacks that can occur in the construction process as well as the solutions to the problems these setbacks can cause.
 
     \subsection{Sudbury Public Housing Development - Air-source Heat Pumps}
-    \par The Sudbury Housing Development is a low income housing development that has had air source heat pumps installed in four pilot units. This project was funded by the SAPHIRE program. This project was chosen as a focus due to the use of air source heat pumps, a fairly new technology in New England. This project also illustrates challenges relating to metering and data collection.
+    \par The Sudbury Housing Development is a low income housing development that has had air source heat pumps installed in four pilot units. This project was funded by the SAPHIRE Program. This project was chosen as a focus due to the use of air source heat pumps, a fairly new technology in New England. This project also illustrates challenges relating to metering and data collection.
 
   \section{Objective \#1: Identifying Concerns of Past Project Site Leaders}
   \par Our first objective was to identify the questions and concerns past project site leaders, including but not limited to school superintendents, housing development directors, department of housing representatives, school facilities managers, and grant coordinators at the three case study sites have had when considering implementing a DOER renewable thermal project. In order to answer these questions and provide summative information in the case studies we produced, we first needed to understand what questions and concerns were involved in the decision of whether or not and how to implement a DOER renewable thermal project. 
